--- a/data/measurements/global-temperatures/sources.yaml
+++ b/data/measurements/global-temperatures/sources.yaml
@@ -1,5 +1,6 @@
 https://climate.nasa.gov/vital-signs/global-temperature/?intent=121:
 - graph.txt
+#(baseline: 1951-1980)
 
 graph.txt:
 - graph.csv
